--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@ body{
     font-family: 'Roboto', sans-serif;
     font-weight: 400;
     font-size: 18px;
+    background:#f8f8f8;
 }
 
 .container{
